--- a/watch.html
+++ b/watch.html
@@ -179,7 +179,7 @@
     }
   </style>
 </head>
-<body class="bg-animation dark">
+<body class="bg-animation">
   <a href="./"><img class="logo" src="logo.png" alt="logo" width="200" height="100" /></a>
   <p><button onclick="toggleTheme()" id="themeBtn">Light Mode</button></p>
 
