--- a/watch.html
+++ b/watch.html
@@ -307,7 +307,7 @@
                   ? `<div id="waveform"></div><div id="controls"><button id="togglePlay">play</button></div>`
                   : `
                     <div class="videoWrapper">
-                      <video id="videoPlayer" autoplay muted playsinline></video>
+                      <video id="videoPlayer" autoplay playsinline></video>
                       <div id="centerPlayPause" class="centerPlayPause"></div>
                       <div class="videoControls">
                         <div class="seekWrapper">
